# QML-OSG

./: .gitignore  CMakeLists.txt  README.md  SimpleQmlApp.pro  main.qml  style.qss
icons/: app_icon_placeholder.txt
src/: main.cpp
